# opl-backend

./: .env.example  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
migrations/: 0001-create-schema.sql  0001_create-auth-schema.sql  0002_deletion-schema.sql  0003_member-schema.sql  0004_folder-schema.sql  0005_front-schema.sql  0006_friend-schema.sql  0007_custom-field-schema.sql  0008_privacy-bucket-schema.sql  0009_apikey-schema.sql  0010_notification-schema.sql  0011_deletion-trigger-patch.sql  0012_friend-notify-tag-patch.sql  0012_notification-settings-schema.sql  0013_member-folder-sort-field-patch.sql  0014_password-reset-patch.sql
src/: error.rs  frontwatch.rs  main.rs  middleware.rs  notification.rs  numberstring.rs  security.rs
src/database/: admin.rs  apikey.rs  deletion.rs  fields.rs  folder.rs  friend.rs  front.rs  member.rs  mod.rs  notification.rs  privacy.rs  session.rs  time.rs  user.rs
src/model/: admin.rs  apikey.rs  auth.rs  deletion.rs  fields.rs  folder.rs  friend.rs  front.rs  import.rs  member.rs  mod.rs  notification.rs  privacy.rs  session.rs  sync.rs  user.rs
src/web/: admin.rs  auth.rs  mod.rs  version.rs
src/web/api/: apikey.rs  export.rs  fields.rs  folder.rs  friend.rs  front.rs  import.rs  member.rs  mod.rs  notification.rs  privacy.rs  session.rs  sync.rs  user.rs
