[package]
name = "opl-backend"
version = "0.3.6"
edition = "2024"
license = "GPL-3"

[dependencies]
actix-web = "4.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
argon2 = "0.5.3"
sha2 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.1"
anyhow = "1.0.102"
thiserror = "2.0.18"
strum_macros = "0.28.0"
web-push = "0.11.0"

[dependencies.uuid]
version = "1.23.3"
features = ["v4"]

[dependencies.chrono]
version = "0.4.45"
features = ["serde"]

[dependencies.sqlx]
version = "0.8.6"
features = ["mysql", "runtime-tokio", "chrono", "uuid", "migrate"]

[dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt-multi-thread"]